...
                            onChanged: (v) =>
                                setState(() => _mqttControlsEnabled = v),
                          ),
                          SwitchListTile(
                            contentPadding: EdgeInsets.zero,
                            title: const Text(
                              'Enable hardware video acceleration',
                            ),
                            subtitle: const Text(
                              'Disable to force software decoding/rendering.',
                            ),
                            value: _hardwareAccelerationEnabled,
                            onChanged: (v) => setState(
...
